[package]
name = "blst_eip2537"
version = "0.1.0"
authors = ["sean-sn <sean@supranational.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Bindings for blst based EIP2537 library"
repository = "https://github.com/sean-sn/blst_eip2537.git"
readme = "README.md"

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = []
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = []
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = []

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rand = "0.7"
rand_chacha = "0.2"
criterion = "0.3"
hex = "0.4"
csv = "1"

[[bench]]
name = "eip2537_benches"
harness = false
